# cone.tile

./: .gitignore  .travis.yml  CHANGES.rst  Makefile  README.rst  bootstrap.sh  buildout.cfg  mx.ini  pyproject.toml  run_coverage.sh  run_tests.sh  setup.py
.github/workflows/: test.yml
etc/: base.cfg
src/cone/tile/: __init__.py  _api.py  _api.rst  _api.txt  exceptionformatter.py  tests.py
src/cone/tile/testdata/: main1.pt  main2.pt  main3.pt  tile1.pt  tile1_override.pt  tile2.pt  tile2_1.pt  tile3.pt  tile4.pt  tile_exc_bug.pt  tmpl1.pt  tmpl2.pt
src/cone/tile/tests/: __init__.py  test_package.py  test_tile.py
