[build-system]
requires = ["hatchling", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[project]
name = "cone.tile"
version = "2.0.0.dev0"
description = "Tiles for use in pyramid framework."
dynamic = ["readme"]
requires-python = ">=3.10"
license = {text = "Simplified BSD"}
authors = [{name = "Cone Contributors", email = "dev@conestack.org"}]
classifiers = [
    "Environment :: Web Environment",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "zope.component",
    "zope.deprecation",
    "zope.exceptions",
    "pyramid>=1.5",
    "pyramid_chameleon",
]

[project.optional-dependencies]
test = [
    "pytest",
]

[project.urls]
Homepage = "http://github.com/conestack/cone.tile"

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/x-rst"
fragments = [
    {path = "README.rst"},
    {text = "\n\n"},
    {path = "CHANGES.rst"},
    {text = "\n\n"},
    {path = "LICENSE.rst"},
]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github/",
    "/docs",
    "/Makefile",
    "/mx.ini",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cone"]

[tool.pytest.ini_options]
consider_namespace_packages = true
addopts = ["--import-mode=importlib"]
pythonpath = "src"

[tool.zest-releaser]
create-wheel = true
